@@ -1,3 +1,10 @@
+2005-10-13  Vincent Noel <vnoel@cox.net>
+
+	* log_repaint.c: (handle_selection_changed_cb):
+	* logrtns.c: (ParseLine), (CloseLog):
+	* logview.h: Don't use a fixed-size buffer for log strings. Cut
+	memory use by >30% in most cases.
+
 2005-10-13  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* logrtns.c: (isLogFile): Only accept regular file as
